# sonarqube-reporter

./: README.md  pyproject.toml  report-config.yaml  requirements.txt  sonar-project.properties  sonarqube_reporter.py
.github/workflows/: ruff.yml
src/: data_processor.py  report_generator.py  sonarqube_client.py  sonarqube_reporter.py
templates/: quality_gate_report.html
templates/css/: report_styles.css
