[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonarqube-reporter"
version = "0.2.0"
description = "Generate quality gate reports from SonarQube data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diamantis Sellis", email = "diamantis.sellis@cosmotech.com"},
]
dependencies = [
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
sonarqube-reporter = "src.sonarqube_reporter:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "templates",
    "README.md"
]
